--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,14 +19,14 @@
     "url": "https://github.com/rodcordeiro/escribaBackend/issues"
   },
   "homepage": "https://github.com/rodcordeiro/escribaBackend#readme",
-  "devDependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.9",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.1.2"
-  },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "knex": "^0.21.12",
+    "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
